international/carte_interactive/static/carte_interactive/css/style.css
#sidebar-wrapper {
  z-index: 10;
  position: absolute;
  left: 0;
  top: 0;
  display: none;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  background: #fff;
  color: #555555;
  border-right: 1px solid #BBBBBB; }

#sidebar-title {
  text-indent: 0; }

#close-menu-btn {
  width: 40px;
  height: 40px;
  margin-top: 15px; }

/* Sidebar Styles */
.sidebar-nav {
  position: absolute;
  top: 0;
  margin: 0;
  padding: 0;
  list-style: none; }

.sidebar-nav li {
  text-indent: 20px;
  line-height: 30px; }

.sidebar-nav > .sidebar-brand {
  height: 50px;
  font-size: 18px;
  line-height: 40px;
  color: #353535; }

.sidebar-nav fieldset {
  margin: 20px 0; }

.sidebar-nav legend {
  margin-bottom: 10px;
  color: #676767 !important;
  background-color: #F4F4F4;
  border-top: 1px solid #E4E4E4; }

.sidebar-nav form input[type="submit"] {
  margin-left: 20px; }

/*fix bootstrap*/
input[type="checkbox"] {
  position: static !important; }

.checkbox-inline + .checkbox-inline, .radio-inline + .radio-inline {
  margin-left: 0 !important; }

.checkbox {
  font-weight: 400;
  display: block; }

#schoolTypes label {
  margin-left: 20px; }

.nav-tabs li {
  text-indent: 0 !important; }

.nav-tabs .glyphicon {
  margin-left: 6px; }

.nav-tabs > .disabled > a:hover {
  border: 1px solid transparent; }

/* make things responsive */
@media screen and (min-width: 600px) and (max-width: 900px) {
  #sidebar-wrapper {
    width: 50%; } }

@media screen and (min-width: 400px) and (max-width: 600px) {
  #sidebar-wrapper {
    width: 75%; } }

@media screen and (min-width: 320px) and (max-width: 400px) {
  #sidebar-wrapper {
    width: 100%; } }

@media screen and (min-width: 300px) and (max-width: 700px) {
  #sidebar-title {
    font-size: 1.5em; } }

@media screen and (max-width: 400px) {
  #sidebar-content-filtrer, #sidebar-content-ajouter, #sidebar-content-editer {
    margin-bottom: 50px; } }

#results-container {
  position: absolute;
  right: 0;
  height: 100%;
  z-index: 10;
  padding: 1em;
  background-color: #fff;
  border-left: 1px solid #BBBBBB;
  display: none;
  overflow-y: auto; }

#close-results-btn {
  position: absolute;
  top: 1em;
  right: 1em; }

@media screen and (min-width: 600px) and (max-width: 900px) {
  #results-container {
    width: 50%; } }

@media screen and (min-width: 400px) and (max-width: 600px) {
  #results-container {
    width: 75%; } }

@media screen and (min-width: 320px) and (max-width: 400px) {
  #results-container {
    width: 100%; } }

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 25px;
  margin-left: 30px; }

/* Hide default HTML checkbox */
.switch input {
  display: none; }

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #E65151;
  -webkit-transition: .4s;
  transition: .4s; }

.slider:before {
  position: absolute;
  content: "";
  height: 17px;
  width: 17px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s; }

input:checked + .slider {
  background-color: #6FD952; }

input:focus + .slider {
  box-shadow: 0 0 1px #6FD952; }

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px); }

/* Rounded sliders */
.slider.round {
  border-radius: 34px; }

.slider.round:before {
  border-radius: 50%; }

/* label placement */
#visite-label {
  position: absolute;
  left: 50px;
  top: 0; }

/** general styles */
a:hover {
  text-decoration: none; }

/** style for Google Map */
html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0; }

#map {
  height: 100%;
  width: 100%; }

#search-bar {
  position: absolute;
  top: 3.5em; }

#menu-toggler {
  z-index: 8; }

#legend {
  position: absolute;
  left: 0;
  bottom: 30px;
  display: inline-block;
  background: #fff;
  padding: 8px;
  padding-left: 5px;
  border: 1px solid #BBBBBB;
  border-left: 0; }

.info-div {
  position: relative; }

.info-icon {
  width: 16px;
  height: 16px; }

.info-btn, .btn-xs {
  padding: 0 !important;
  width: 20px;
  height: 20px; }

#info-title {
  width: 96%; }

#edit-btn {
  position: absolute;
  top: 8px;
  right: 15px; }

#star-icon, #info_particularites {
  float: left; }

#logout-btn {
  color: black; }

#http_marker {
  text-indent: 0; }

@media screen and (max-width: 400px) {
  #search-bar {
    width: 100%; } }

@media screen and (min-width: 400px) and (max-width: 600px) {
  #search-bar {
    width: 75%; } }

